support for opacity added, introduces jQuery dependency

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
 	<title>Bing Aerial Imagery Analyzer for OpenStreetMap</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<script type="text/javascript" src="http://ecn.dev.virtualearth.net/mapcontrol/mapcontrol.ashx?v=7.0"></script> 
+	<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>	<script type="text/javascript" src="http://ecn.dev.virtualearth.net/mapcontrol/mapcontrol.ashx?v=7.0"></script> 
 	<script type="text/javascript">
 	// This is the URL at which the application (and tile.php) is accessible through the internet. 
 	var baseURL = 'http://lima.schaaltreinen.nl/mvexel/';
@@ -34,7 +36,7 @@
 		if(isNaN(z)) z=parseInt(getParameterByName("zoom")); 
 		if(isNaN(z)) z=8;
 		var nodepth=getParameterByName("nodepth");
-		baseURL += '/bingimageanalyzer/';
+		baseURL += 'bingimageanalyzer/';
 		var tileSourceUri = baseURL + 'tile.php?t={quadkey}&nodepth=' + nodepth;
 		//alert(tileSourceUri);
 		map = new Microsoft.Maps.Map(document.getElementById("mapDiv"), 
@@ -106,6 +108,32 @@
         }
     }
 	</script> 
+	<script>
+		$(document).ready(function() 
+		{
+			$("#slider").slider();
+			$("#slider").slider( "option", "max", 1 );
+			$("#slider").slider( "option", "min", 0 );
+			$("#slider").slider( "option", "step", 0.1 );
+			$( "#slider" ).slider( "option", "value", 1);
+			$("#slider").slider({
+       			change: function(event, ui) {
+       				var nodepth=getParameterByName("nodepth");
+					var tileSourceUri = baseURL + 'tile.php?t={quadkey}&nodepth=' + nodepth;
+					var tileSource = new Microsoft.Maps.TileSource({uriConstructor: tileSourceUri});
+//       				alert(tileSourceUri);
+       				var tilelayer= new Microsoft.Maps.TileLayer({ mercator: tileSource, opacity: $( "#slider" ).slider( "option", "value" ) });
+       				map.entities.pop();
+					map.entities.push(tilelayer);
+				}
+		    });
+  		});
+  </script>
+	<style type="text/css">
+		#slider { margin: 5px 10px 5px 10px; }
+		#placeInput {width: 90%}
+		.sliderbox {margin-top:2px;padding:2px;border:1px solid #aaa}
+	</style>
 </head>
 <body onload="GetMap();">
 	<div id='mapDiv' style="position:absolute; width:100%; height:100%;top:0px;left:0px;">
@@ -113,15 +141,19 @@
 	<div id='edit' style="position:absolute;top:0px;right:0px;width:120px;height:16px;padding:2px;background-color:white;font:bold 12px arial;z-index:100;text-align:right">
 	edit in potlatch2
 	</div>
-	<div id='rest' style="position:absolute;top:20px;right:0px;width:120px;height:115px;padding:2px;background-color:white;opacity:0.8;font:12px arial;z-index:100;text-align:right">
+	<div id='rest' style="position:absolute;top:20px;right:0px;width:120px;height:160px;padding:2px;background-color:white;opacity:0.8;font:12px arial;z-index:100;text-align:right">
 		<a href="about.txt">about this</a><br />
 		<a href='https://oegeo.wordpress.com/2010/12/03/bing-aerial-photos-for-openstreetmap-great-but-are-they-recent/'>blog post</a> <br />
 		<a href='http://wiki.openstreetmap.org/wiki/Talk:Bing#Age_of_images'>report an error</a> <br />
 		<span id='permalink'>permalink</span> <br />
-		<br />
-		<input size=8 id="txtQuery" type="text" onClick=select() onkeydown="if (event.keyCode == 13) findName()" value="Portland" />
-		<a href="#" onClick=findName()>find</a> <br />
 		current zoom: <span id=curzoom></span> 
+		<div class=sliderbox>
+			<input id="placeInput" size=13 id="txtQuery" type="text" onClick=select() onkeydown="if (event.keyCode == 13) findName()" value="Portland" /><br />
+			<a href="#" onClick=findName()>find</a> 
+		</div>
+		<div class=sliderbox>
+			<div id="slider"></div>analysis lyr opacity
+		</div>
 	</div>
 	<div style='font:10px helvetica, sans-serif;text-align:center;border:1px solid black;background-color:#fff;position:absolute;bottom:35px;right:10px;opacity:0.6;'>
 		A<br />
