--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
 	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>	<script type="text/javascript" src="http://ecn.dev.virtualearth.net/mapcontrol/mapcontrol.ashx?v=7.0"></script> 
 	<script type="text/javascript">
 	// This is the URL at which the application (and tile.php) is accessible through the internet. 
-	//var baseURL = 'http://lima.schaaltreinen.nl/mvexel/';
-	var baseURL = 'http://localhost/';
+	var baseURL = 'http://lima.schaaltreinen.nl/mvexel/';
+	//var baseURL = 'http://localhost/';
 	// This is your Bing Maps key. Get your own: http://msdn.microsoft.com/en-us/library/ff428642.aspx
+	// FOR LIMA.SCHAALTREINEN.NL use only:
 	var bingCredentials = "AncYMYJDvHMmYPXT7mJcpCeYxGEVcJFj_StK8PO3ih8WgjvfHzuvnyjc_iRFXqN2";
+	// FOR MVEXEL.DEV.OPENSTREETMAP.ORG use only:
+	// var bingCredentials = "AmMrXfkYub1DlEAme9Ck0-LLbIXoZxy06Af8uqkrdA-OSIvc3qp6PEj9DP_oz662",
+
 	// No need to change anything beyond here
 	// ==============================================================
 	var map;
@@ -42,10 +46,7 @@
 		//alert(tileSourceUri);
 		map = new Microsoft.Maps.Map(document.getElementById("mapDiv"), 
 			{
-//				FOR TEST ENVIRONMENT
-				credentials: "AncYMYJDvHMmYPXT7mJcpCeYxGEVcJFj_StK8PO3ih8WgjvfHzuvnyjc_iRFXqN2",
-//				FOR OSM DEV ENVIRONMENT
-//				credentials: "AmMrXfkYub1DlEAme9Ck0-LLbIXoZxy06Af8uqkrdA-OSIvc3qp6PEj9DP_oz662",
+				credentials: bingCredentials,
                 center: new Microsoft.Maps.Location(lat,lon),
                 mapTypeId: Microsoft.Maps.MapTypeId.aerial,
                 zoom: z,
@@ -53,7 +54,7 @@
                 labelOverlay: Microsoft.Maps.LabelOverlay.hidden
 			}
 		);
-        var tileSource = new Microsoft.Maps.TileSource({uriConstructor: tileSourceUri});
+    	var tileSource = new Microsoft.Maps.TileSource({uriConstructor: tileSourceUri});
     	var tilelayer= new Microsoft.Maps.TileLayer({ mercator: tileSource, opacity: 1 });
     	
 		map.entities.push(tilelayer);
