--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>	<script type="text/javascript" src="http://ecn.dev.virtualearth.net/mapcontrol/mapcontrol.ashx?v=7.0"></script> 
 	<script type="text/javascript">
 	// This is the URL at which the application (and tile.php) is accessible through the internet. 
-	var baseURL = 'http://lima.schaaltreinen.nl/mvexel/';
-	//var baseURL = 'http://localhost/';
+	var baseURL = 'http://lima.schaaltreinen.nl/mvexel/bingimageanalyzer/';
+	//var baseURL = 'http://localhost/bingimageanalyzer/;
 	// This is your Bing Maps key. Get your own: http://msdn.microsoft.com/en-us/library/ff428642.aspx
 	// FOR LIMA.SCHAALTREINEN.NL use only:
 	var bingCredentials = "AncYMYJDvHMmYPXT7mJcpCeYxGEVcJFj_StK8PO3ih8WgjvfHzuvnyjc_iRFXqN2";
@@ -41,7 +41,6 @@
 		if(isNaN(z)) z=parseInt(getParameterByName("zoom")); 
 		if(isNaN(z)) z=8;
 		var nodepth=getParameterByName("nodepth");
-		baseURL += 'bingimageanalyzer/';
 		var tileSourceUri = baseURL + 'tile.php?t={quadkey}&nodepth=' + nodepth;
 		//alert(tileSourceUri);
 		map = new Microsoft.Maps.Map(document.getElementById("mapDiv"), 
