--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>	<script type="text/javascript" src="http://ecn.dev.virtualearth.net/mapcontrol/mapcontrol.ashx?v=7.0"></script> 
 	<script type="text/javascript">
 	// This is the URL at which the application (and tile.php) is accessible through the internet. 
-	var baseURL = 'http://lima.schaaltreinen.nl/mvexel/bingimageanalyzer/';
+	//var baseURL = 'http://lima.schaaltreinen.nl/mvexel/bingimageanalyzer/';
+	var baseURL = 'http://mvexel.dev.openstreetmap.org/bingimageanalyzer/';
 	//var baseURL = 'http://localhost/bingimageanalyzer/;
 	// This is your Bing Maps key. Get your own: http://msdn.microsoft.com/en-us/library/ff428642.aspx
 	// FOR LIMA.SCHAALTREINEN.NL use only:
-	var bingCredentials = "AncYMYJDvHMmYPXT7mJcpCeYxGEVcJFj_StK8PO3ih8WgjvfHzuvnyjc_iRFXqN2";
+	// var bingCredentials = "AncYMYJDvHMmYPXT7mJcpCeYxGEVcJFj_StK8PO3ih8WgjvfHzuvnyjc_iRFXqN2";
 	// FOR MVEXEL.DEV.OPENSTREETMAP.ORG use only:
-	// var bingCredentials = "AmMrXfkYub1DlEAme9Ck0-LLbIXoZxy06Af8uqkrdA-OSIvc3qp6PEj9DP_oz662",
+	var bingCredentials = "AmMrXfkYub1DlEAme9Ck0-LLbIXoZxy06Af8uqkrdA-OSIvc3qp6PEj9DP_oz662";
 
 	// No need to change anything beyond here
 	// ==============================================================
