simpler opacity change, undocumented, see http://social.msdn.microsoft.com/Forums/en-US/vemapcontroldev/thread/9da4c9db-4dfa-40d5-be73-9807e5a545af/#9b430b31-f6ec-45d5-a04d-1c282ba7ec1d

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	// No need to change anything beyond here
 	// ==============================================================
 	var map;
+	var tilelayer;
 	// http://stackoverflow.com/questions/901115/get-querystring-values-with-jquery
 	function getParameterByName( name ) 
 	{
@@ -55,7 +56,7 @@
 			}
 		);
     	var tileSource = new Microsoft.Maps.TileSource({uriConstructor: tileSourceUri});
-    	var tilelayer= new Microsoft.Maps.TileLayer({ mercator: tileSource, opacity: 1 });
+    	tilelayer= new Microsoft.Maps.TileLayer({ mercator: tileSource, opacity: 1 });
     	
 		map.entities.push(tilelayer);
 		map.isRotationEnabled(false);
@@ -120,13 +121,8 @@
 			$( "#slider" ).slider( "option", "value", 1);
 			$("#slider").slider({
        			change: function(event, ui) {
-       				var nodepth=getParameterByName("nodepth");
-					var tileSourceUri = baseURL + 'tile.php?t={quadkey}&nodepth=' + nodepth;
-					var tileSource = new Microsoft.Maps.TileSource({uriConstructor: tileSourceUri});
-//       				alert(tileSourceUri);
-       				var tilelayer= new Microsoft.Maps.TileLayer({ mercator: tileSource, opacity: $( "#slider" ).slider( "option", "value" ) });
-       				map.entities.pop();
-					map.entities.push(tilelayer);
+					var newopacity = $( "#slider" ).slider( "option", "value" );
+					tilelayer.setOptions({ opacity: newopacity });
 				}
 		    });
   		});
